[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/CardView.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/header.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/CardEditor.gd" type="Script" id=6]
[ext_resource path="res://assets/theme.tres" type="Theme" id=7]

[sub_resource type="InputEventAction" id=8]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=9]
action = "ui_save"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=10]
action = "ui_new"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 10 )

[node name="card_editor" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="HBoxContainer" parent="."]
margin_right = 1900.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_btn" type="Button" parent="header"]
margin_right = 75.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "<"

[node name="title" type="Label" parent="header"]
margin_left = 79.0
margin_top = 3.0
margin_right = 1592.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Modification des cartes"
align = 1

[node name="open_file" type="Button" parent="header"]
margin_left = 1596.0
margin_right = 1720.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
custom_fonts/font = ExtResource( 1 )
shortcut_in_tooltip = false
text = "Voir le fichier"

[node name="save_btn" type="Button" parent="header"]
margin_left = 1724.0
margin_right = 1900.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
custom_fonts/font = ExtResource( 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Enregistrer (Ctrl+S)"

[node name="content" type="HSplitContainer" parent="."]
margin_top = 60.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cards" type="VBoxContainer" parent="content"]
margin_right = 408.0
margin_bottom = 1000.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="title" type="Label" parent="content/cards"]
margin_right = 408.0
margin_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Cartes"
align = 1
clip_text = true
uppercase = true

[node name="scroll" type="ScrollContainer" parent="content/cards"]
margin_top = 42.0
margin_right = 408.0
margin_bottom = 949.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="list" type="VBoxContainer" parent="content/cards/scroll"]
margin_right = 408.0
margin_bottom = 907.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="add" type="Button" parent="content/cards"]
margin_top = 954.0
margin_right = 408.0
margin_bottom = 1000.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
custom_fonts/font = ExtResource( 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
text = "Ajouter (Ctrl+N)"

[node name="workspace" type="HBoxContainer" parent="content"]
margin_left = 418.0
margin_right = 1900.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.59

[node name="editor" type="VBoxContainer" parent="content/workspace"]
margin_right = 1069.0
margin_bottom = 1000.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="grid" type="GridContainer" parent="content/workspace/editor"]
margin_right = 1069.0
margin_bottom = 470.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 2

[node name="name" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_right = 527.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/name"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Nom"

[node name="edit" type="LineEdit" parent="content/workspace/editor/grid/name"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="type" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_left = 542.0
margin_right = 1069.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/type"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Type"

[node name="edit" type="OptionButton" parent="content/workspace/editor/grid/type"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "Lieu"
items = [ "Lieu", null, false, 0, null, "Créature", null, false, 1, null, "Construction", null, false, 2, null, "Divinité", null, false, 3, null, "Miracle", null, false, 4, null ]
selected = 0

[node name="subtype" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_top = 97.0
margin_right = 527.0
margin_bottom = 179.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/subtype"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Sous-types"

[node name="edit" type="LineEdit" parent="content/workspace/editor/grid/subtype"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="rarity" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_left = 542.0
margin_top = 97.0
margin_right = 1069.0
margin_bottom = 179.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/rarity"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Rareté"

[node name="edit" type="OptionButton" parent="content/workspace/editor/grid/rarity"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "Banale"
items = [ "Banale", null, false, 0, null, "Remarquable", null, false, 1, null, "Exceptionnelle", null, false, 2, null, "Unique", null, false, 3, null ]
selected = 0

[node name="extension" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_top = 194.0
margin_right = 527.0
margin_bottom = 276.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/extension"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Extension"

[node name="edit" type="LineEdit" parent="content/workspace/editor/grid/extension"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="constraints" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_left = 542.0
margin_top = 194.0
margin_right = 1069.0
margin_bottom = 276.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/constraints"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Contraintes"

[node name="edit" type="LineEdit" parent="content/workspace/editor/grid/constraints"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="attack" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_top = 291.0
margin_right = 527.0
margin_bottom = 373.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/attack"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Attaque"

[node name="edit" type="LineEdit" parent="content/workspace/editor/grid/attack"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="defense" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_left = 542.0
margin_top = 291.0
margin_right = 1069.0
margin_bottom = 373.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/defense"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Défense"

[node name="edit" type="LineEdit" parent="content/workspace/editor/grid/defense"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="devotions" type="VBoxContainer" parent="content/workspace/editor/grid"]
margin_top = 388.0
margin_right = 527.0
margin_bottom = 470.0
size_flags_horizontal = 3

[node name="label" type="Label" parent="content/workspace/editor/grid/devotions"]
margin_right = 527.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Dévotions"

[node name="edit" type="LineEdit" parent="content/workspace/editor/grid/devotions"]
margin_top = 38.0
margin_right = 527.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 1 )
caret_blink = true
caret_blink_speed = 0.5

[node name="description" type="VBoxContainer" parent="content/workspace/editor"]
margin_top = 485.0
margin_right = 1069.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="label" type="Label" parent="content/workspace/editor/description"]
margin_right = 1069.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Description"

[node name="edit" type="TextEdit" parent="content/workspace/editor/description"]
margin_top = 38.0
margin_right = 1069.0
margin_bottom = 515.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
wrap_enabled = true

[node name="preview" type="VBoxContainer" parent="content/workspace"]
margin_left = 1073.0
margin_right = 1482.0
margin_bottom = 1000.0

[node name="margins" type="MarginContainer" parent="content/workspace/preview"]
margin_top = 187.0
margin_right = 409.0
margin_bottom = 730.0
size_flags_vertical = 6
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="preview" parent="content/workspace/preview/margins" instance=ExtResource( 2 )]
margin_left = 10.0
margin_right = 399.0
size_flags_horizontal = 3
size_flags_vertical = 3
preview = true

[node name="label_color" type="Label" parent="content/workspace/preview"]
margin_top = 922.0
margin_right = 409.0
margin_bottom = 956.0
custom_fonts/font = ExtResource( 1 )
text = "Couleur du fond"
align = 1

[node name="color_picker" type="ColorPickerButton" parent="content/workspace/preview"]
margin_top = 960.0
margin_right = 409.0
margin_bottom = 1000.0
custom_fonts/font = ExtResource( 1 )
edit_alpha = false
